// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responseParser should parse initialResponse combined 1`] = `
Object {
  "commandType": 34,
  "mac": "007A817E9AC",
  "seq": 0,
  "state": Object {
    "currentTemperature": 26,
    "fanSpeed": 2,
    "health": false,
    "limits": 0,
    "mode": 2,
    "power": false,
    "targetTemperature": 30,
  },
  "type": 21,
}
`;

exports[`responseParser should parse initialResponse2 1`] = `
Object {
  "commandType": 34,
  "mac": "007A817E9AC",
  "seq": 10,
  "state": Object {
    "currentTemperature": 21,
    "fanSpeed": 2,
    "health": true,
    "limits": 2,
    "mode": 1,
    "power": true,
    "targetTemperature": 26,
  },
  "type": 21,
}
`;
